// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders correctly 1`] = `
<svg
  className="icon_style"
  focusable="false"
  height="100%"
  width="100%"
/>
`;

exports[`Icon renders correctly passes children 1`] = `
<svg
  className="icon_style"
  focusable="false"
  height="100%"
  width="100%"
>
  FOO
</svg>
`;

exports[`Icon renders correctly passes props 1`] = `
<svg
  className="icon_style"
  focusable="false"
  height="100%"
  viewport="FOO"
  width="100%"
/>
`;

exports[`Icon renders correctly with height 1`] = `
<svg
  className="icon_style"
  focusable="false"
  height="100"
  width={null}
/>
`;

exports[`Icon renders correctly with width 1`] = `
<svg
  className="icon_style"
  focusable="false"
  height={null}
  width="100"
/>
`;
